--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint '{**,.**}/*.{js,ts,jsx,tsx}'",
+    "lint:fix": "eslint '{**,.**}/*.{js,ts,jsx,tsx}' --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -45,7 +47,10 @@
     "@eslint/js": "^9.10.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.36.1",
+    "eslint-plugin-check-file": "^2.8.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "globals": "^15.9.0",
     "msw": "^2.4.9",
     "prettier": "^3.3.3"
