--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rocket_react",
   "version": "0.1.0",
-  "homepage": "www.pavlo-starovoit.com",
+  "homepage": "pavlo-starovoit.com",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
