--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rocket_react",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://192.168.4.1",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
